// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders event entry with no content when unrecognized entry  1`] = `
<React.Fragment>
  <React.Fragment />
</React.Fragment>
`;

exports[`renders event entry with note  1`] = `
<React.Fragment>
  <Card
    className="p-0 mb-3"
  >
    <CardHeader>
      <ForwardRef
        className="me-2"
        color="currentColor"
        size="1em"
        title={null}
      />
    </CardHeader>
    <CardBody>
      <CardText>
        event-1-note
      </CardText>
    </CardBody>
    <CardFooter>
      12-07-2024, 20:00
    </CardFooter>
  </Card>
</React.Fragment>
`;

exports[`renders event entry with photo  1`] = `
<React.Fragment>
  <Card
    className="p-0 mb-3"
  >
    <CardHeader>
      <ForwardRef
        className="me-2"
        color="currentColor"
        size="1em"
        title={null}
      />
       
      event-1-photo-url
    </CardHeader>
    <CardBody>
      <CardText>
        event-1-description
      </CardText>
    </CardBody>
    <CardFooter>
      12-07-2024, 20:00
    </CardFooter>
  </Card>
</React.Fragment>
`;
